--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "npm run build:watch & npm run node:watch",
     "ci": "npm run clean && npm run build",
     "clean": "del ./dist",
-    "build": "tsc --project ./tsconfig.lib.json && cpy ./package.json dist/lib/ && cpy ./README.md dist/lib/ && cpy ./src/index.html dist/lib/",
+    "build": "tsc --project ./tsconfig.lib.json  && cpy ./package.json dist/lib/ && cpy ./README.md dist/lib/",
     "node:watch": "nodemon ./dist/lib/index.js --path ./package.json",
     "build:watch": "tsc --watch --project ./tsconfig.lib.json"
   },
@@ -41,6 +41,8 @@
   "dependencies": {
     "fs-extra": "^10.0.0",
     "jsdom": "^19.0.0",
+    "lit": "^2.1.2",
+    "tslib": "^2.3.1",
     "yargs": "^17.3.1"
   }
 }
