add rollup to include clarity and replicate the trap returned falsish error

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start": "npm run build:watch & npm run node:watch",
     "ci": "npm run clean && npm run build",
     "clean": "del ./dist",
-    "build": "tsc --project ./tsconfig.lib.json  && cpy ./package.json dist/lib/ && cpy ./README.md dist/lib/",
+    "build": "tsc --project ./tsconfig.lib.json && rollup --config",
     "node:watch": "nodemon ./dist/lib/index.js --path ./package.json",
-    "build:watch": "tsc --watch --project ./tsconfig.lib.json"
+    "build:watch": "tsc --watch --project ./tsconfig.lib.json && rollup --config --watch"
   },
   "repository": {
     "type": "git",
@@ -33,12 +33,15 @@
   },
   "homepage": "https://github.com/coryrylan/node-cli-starter#readme",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "cpy-cli": "^3.1.1",
     "del-cli": "^4.0.1",
     "nodemon": "^2.0.15",
+    "rollup": "^2.66.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@cds/core": "^5.6.2",
     "fs-extra": "^10.0.0",
     "jsdom": "^19.0.0",
     "lit": "^2.1.2",
