--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "*"
   ],
   "scripts": {
-    "start": "npm run build:watch & npm run node:watch",
-    "ci": "npm run clean && npm run build",
+    "start": "node --trace-warnings dist/lib/index.js",
     "clean": "del ./dist",
-    "build": "tsc --project ./tsconfig.lib.json && rollup --config",
-    "node:watch": "nodemon ./dist/lib/index.js --path ./package.json",
-    "build:watch": "tsc --watch --project ./tsconfig.lib.json && rollup --config --watch"
+    "build": "tsc --project ./tsconfig.lib.json && rollup --config"
   },
   "repository": {
     "type": "git",
@@ -26,12 +23,7 @@
     "cli",
     "typescript"
   ],
-  "author": "Cory Rylan",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/coryrylan/node-cli-starter/issues"
-  },
-  "homepage": "https://github.com/coryrylan/node-cli-starter#readme",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "cpy-cli": "^3.1.1",
