--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,7 @@
     "importHelpers": true,
     "rootDir": "./src",
     "baseUrl": "./",
-    "paths": {
-      "web-test-runner-performance": ["./dist/lib"],
-      "web-test-runner-performance/*": ["./dist/lib/*"]
-    }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/script.js", "src/script.js"],
   "exclude": ["node_modules"]
 }
